[tool.poetry]
name = "tensorbeat-scraper"
version = "0.1.0"
description = ""
authors = ["Evan Pierce <evanpierce@aim.com>"]

[tool.poetry.dependencies]
python = "^3.8"
betterproto = {git = "https://github.com/danielgtaylor/python-betterproto", rev = "59f5f88c0d5f21cfeb819399c3f72634e8422fe6"}
google-cloud-storage = "^1.35.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = 'tensorbeat_scraper.main:init'